Fix floating button on mobile

--- a/oh_queue/static/css/style.css
+++ b/oh_queue/static/css/style.css
@@ -71,6 +71,7 @@ html, body{
   vertical-align: middle;
   line-height: 50px;
   cursor: pointer;
+  margin: 0;
 }
 
 #help-form-container {
